--- a/composer.json
+++ b/composer.json
@@ -48,10 +48,10 @@
     },
     "require-dev": {
         "laravel/pint": "^1.9",
-        "nunomaduro/larastan": "^2.0",
+        "larastan/larastan": "^2.0",
         "nunomaduro/phpinsights": "^2.8",
         "tightenco/tlint": "^9.1",
-        "orchestra/testbench": "^8.12"
+        "orchestra/testbench": "^9.0"
     },
     "extra": {
         "laravel": {
@@ -75,6 +75,6 @@
     },
     "require": {
         "guzzlehttp/guzzle": "^7.8",
-        "laravel/prompts": "^0.1.11"
+        "laravel/prompts": "^0.3"
     }
 }
